tests/errors/compiler/wait_while_in_do_stmt/do_without_while.c

void main()
{
	int a = 5;
	int b = 10;
	do
	{
		b++;
	} (b < 10);

	printid(a);
	printid(b);
}